--- a/W.O.R.D.S/Views/Dictionary.xaml
+++ b/W.O.R.D.S/Views/Dictionary.xaml
@@ -66,9 +66,9 @@
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Перевод:</TextBlock>
             <TextBox Text="{Binding WordTranslation}" Width="100" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Уровень:</TextBlock>
-            <ComboBox ItemsSource="{Binding}" Width="50" Style="{StaticResource ButtonStyle}" Margin="4,0,6,0"></ComboBox>
+            <ComboBox ItemsSource="{Binding Levels}" SelectedItem="{Binding SelectedLevel}" Width="50" Style="{StaticResource ComboboxStyle}" Margin="4,0,6,0"></ComboBox>
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Часть речи:</TextBlock>
-            <ComboBox ItemsSource="{Binding}" Width="100" Style="{StaticResource ButtonStyle}" Margin="4,0,6,0"></ComboBox>
+            <ComboBox ItemsSource="{Binding PartsOfSpeech}" SelectedItem="{Binding SelectedPartOfSpeech}" Width="100" Style="{StaticResource ComboboxStyle}" Margin="4,0,6,0"></ComboBox>
             <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}" Width="180" Style="{StaticResource ComboboxStyle}" Margin="4,0,6,0">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -79,15 +79,18 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <CheckBox VerticalAlignment="Center" Margin="4,0,6,0">У</CheckBox>
-            <CheckBox VerticalAlignment="Center">К</CheckBox>
+            <CheckBox IsChecked="{Binding NoLevel}" VerticalAlignment="Center" Margin="4,0,6,0">У</CheckBox>
+            <CheckBox IsChecked="{Binding NoCategory}" VerticalAlignment="Center">К</CheckBox>
         </StackPanel>
 
         <StackPanel Grid.Row="3" Orientation="Horizontal">
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Транскрипция:</TextBlock>
-            <TextBox Text="" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <TextBox Text="{Binding WordTranscription}" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Значение:</TextBlock>
-            <TextBox Text="" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <TextBox Text="{Binding WordMeaning}" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Пример:</TextBlock>
+            <TextBox Text="{Binding WordExample}" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <CheckBox IsChecked="{Binding NoPartOfSpeech}" VerticalAlignment="Center">Ч</CheckBox>
         </StackPanel>
     </Grid>
 </Window>
