+ Auto save selected + enhanced examples

--- a/W.O.R.D.S/Views/Card.xaml
+++ b/W.O.R.D.S/Views/Card.xaml
@@ -55,7 +55,11 @@
                 <Image Source="/Images/rhombus.png" Width="16" Height="16" Margin="0,0,8,0"></Image>
                 <TextBlock Text="{Binding Mode.Word.Meaning}" Foreground="MidnightBlue" FontSize="16" TextWrapping="Wrap"></TextBlock>
             </DockPanel>
-            <TextBlock Text="{Binding Mode.Word.Example.Name}" HorizontalAlignment="Center" FontSize="16" FontStyle="Italic" TextWrapping="Wrap"></TextBlock>
+            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap">
+                <Run Text="{Binding Mode.Word.Example.Left}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding Mode.Word.Example.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding Mode.Word.Example.Right}" FontSize="18" FontStyle="Italic"></Run>
+            </TextBlock>
         </StackPanel>
 
         <StackPanel Grid.Row="1" VerticalAlignment="Center" Visibility="{Binding Mode.Presenter.VariantsBottomVisible}">
@@ -83,7 +87,11 @@
                 <Image Source="/Images/rhombus.png" Width="16" Height="16" Margin="0,0,8,0"></Image>
                 <TextBlock Text="{Binding Mode.Word.Meaning}" Foreground="MidnightBlue" FontSize="16" TextWrapping="Wrap"></TextBlock>
             </DockPanel>
-            <TextBlock Text="{Binding Mode.Word.Example.Name}" HorizontalAlignment="Center" FontSize="16" FontStyle="Italic" TextWrapping="Wrap" Visibility="{Binding Mode.Presenter.TypingBottomVisible}"></TextBlock>
+            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Visibility="{Binding Mode.Presenter.TypingBottomVisible}">
+                <Run Text="{Binding Mode.Word.Example.Left}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding Mode.Word.Example.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding Mode.Word.Example.Right}" FontSize="18" FontStyle="Italic"></Run>
+            </TextBlock>
         </StackPanel>
 
         <TextBlock Grid.Row="1" Visibility="{Binding Mode.Presenter.CloseVisible}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Indigo" FontSize="26">
