--- a/W.O.R.D.S/Views/Dictionary.xaml
+++ b/W.O.R.D.S/Views/Dictionary.xaml
@@ -21,7 +21,7 @@
         </Style>
         <converters:ExampleConverter x:Key="ExampleConverter" />
     </Window.Resources>
-    <Grid>
+    <Grid Background="Gainsboro">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
